# Digital-Twins-for-ROV

./: README.md
Materials/: Dark-Sky.mat  VertexColor.mat
Original_folder/: ROSInitializer.cs  StartScreen.cs
Scenes/: DT.unity  Simulation.unity  start_DT.unity  test_DT.unity
Scripts/: BlueRovDtController.cs  BlueRovPathController.cs  BlueRovPtCloudController.cs  BlueRovTeleOpController.cs  ButtonController.cs  CameraFollow.cs  CameraFollow2.cs  CameraFollow3.cs  CameraSwitch.cs  LatencyController.cs
Scripts/Ros Bridge/: BlueRovCameraSubscriber.cs  BlueRovCloudSubscriber.cs  BlueRovPathPlanningPublisher.cs  BlueRovPoseSubscriber.cs  BlueRovPressureSubscriber.cs  BlueRovPtCloudSubscriber.cs  BlueRovTeleopPublisher.cs  LatencyPublisher.cs
Shaders/: PointCloudShader.shader
dt-ros/: CMakeLists.txt  package.xml
dt-ros/src/: densify.py  latency.py  octo.cpp  pathplanning.cpp  tf-look.py
dt-ros/srv/: pp.srv
